--- a/src/app/app-main-page/views/home/home.component.html
+++ b/src/app/app-main-page/views/home/home.component.html
@@ -1,11 +1,10 @@
 <div class="card-container">
-  <h1 x-large class="sample-content">Your Content Here</h1>
+  <h1 x-large class="sample-content">Home</h1>
 
   <hr>
 
   <div>
-    For hot module reloading run
-    <pre>npm run start:hmr</pre>
+    TODO: Home page
   </div>
 
   <hr>
